--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -17,7 +17,7 @@
 						<li><a class="nav-link" href="{% url 'shop' %}">Shop</a></li>
 						<li><a class="nav-link" href="{% url 'about' %}">About us</a></li>
 						<li><a class="nav-link" href="{% url 'services' %}">Services</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
+						<li><a class="nav-link" href="{% url 'blog' %}">Blog</a></li>
 						<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					</ul>
 
