--- a/templates/shop/services.html
+++ b/templates/shop/services.html
@@ -137,7 +137,7 @@
 						
 					<!-- Start Column 2 -->
 					<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-						<a class="product-item" href="cart.html">
+						<a class="product-item" href="{{item.get_url}}">
 							<img src="{{item.image.url}}" class="img-fluid product-thumbnail">
 							<h3 class="product-title">{{item.product_name}}</h3>
 							<strong class="product-price">${{item.price}}</strong>
