--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 		<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
 		<link href="{% static 'css/style.css' %}" rel="stylesheet">
+		{% block extra_css %}{% endblock %}
 		<title>{% block title %} {% endblock %} </title>
 	</head>
 
