--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -22,7 +22,19 @@
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="#"><img src="{% static 'images/user.svg' %}"></a></li>
+						
+						{% if user.is_authenticated  %}
+
+							<li><a class="nav-link" href="{% url 'dashboard' %}"><img src="{% static 'images/user.svg' %}"></a></li>
+							
+						
+						{% else %}
+						<li>
+							<a class="nav-link" href="{% url 'register' %}" aria-label="Register">
+								<img src="{% static 'images/register.svg' %}" alt="Register">
+							</a>
+						</li>
+						{% endif %}
 						<li><a class="nav-link" href="{% url 'cart' %}"><img src="{% static 'images/cart.svg' %}"></a></li>
 					</ul>
 				</div>
