update the code

--- a/templates/blog/detail_blog.html
+++ b/templates/blog/detail_blog.html
@@ -13,7 +13,7 @@ Blog Detail
 		<div class="row justify-content-between">
 			<div class="col-lg-5">
 				<div class="intro-excerpt">
-					<h1>Amazing Blog Post Title</h1>
+					<h1>{{blog.blog_title}}</h1>
 					<p class="blog-meta">
 						<span><i class="fas fa-user"></i>{{blog.user}}</span> | 
 						<span><i class="fas fa-calendar"></i> {{blog.created_at|date:"d M Y"}}</span>
