--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -120,7 +120,7 @@ Cart
         
                       <div class="row">
                         <div class="col-md-12">
-                          <button class="btn btn-black btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To Checkout</button>
+                          <a href="{% url 'order' %}" class="btn btn-black btn-lg py-3 btn-block" >Proceed To Checkout</a>
                         </div>
                       </div>
                     </div>
