--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -18,7 +18,7 @@
 						<li><a class="nav-link" href="{% url 'about' %}">About us</a></li>
 						<li><a class="nav-link" href="{% url 'services' %}">Services</a></li>
 						<li><a class="nav-link" href="{% url 'blog' %}">Blog</a></li>
-						<li><a class="nav-link" href="contact.html">Contact us</a></li>
+						<li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
