--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -36,24 +36,12 @@
             <div class="floating-card floating-card-1">
               <i class="fa-solid fa-shopping-bag"></i>
               <div>
-                <strong>12</strong>
+                <strong>{{order_count}}</strong>
                 <span>Orders</span>
               </div>
             </div>
-            <div class="floating-card floating-card-2">
-              <i class="fa-solid fa-heart"></i>
-              <div>
-                <strong>8</strong>
-                <span>Saved</span>
-              </div>
-            </div>
-            <div class="floating-card floating-card-3">
-              <i class="fa-solid fa-star"></i>
-              <div>
-                <strong>24</strong>
-                <span>Reviews</span>
-              </div>
-            </div>
+            
+           
           </div>
         </div>
       </div>
@@ -71,7 +59,7 @@
               <i class="fa-solid fa-shopping-cart"></i>
             </div>
             <div class="modern-stat-card__content">
-              <h3 class="modern-stat-card__value">12</h3>
+              <h3 class="modern-stat-card__value">{{order_count}}</h3>
               <p class="modern-stat-card__label">Total Orders</p>
             </div>
             <div class="modern-stat-card__bg-icon">
@@ -80,20 +68,7 @@
           </div>
         </div>
 
-        <div class="col-6 col-md-6 col-lg-3">
-          <div class="modern-stat-card modern-stat-card--pink">
-            <div class="modern-stat-card__icon">
-              <i class="fa-solid fa-heart"></i>
-            </div>
-            <div class="modern-stat-card__content">
-              <h3 class="modern-stat-card__value">8</h3>
-              <p class="modern-stat-card__label">Wishlist Items</p>
-            </div>
-            <div class="modern-stat-card__bg-icon">
-              <i class="fa-solid fa-heart"></i>
-            </div>
-          </div>
-        </div>
+        
 
         <div class="col-6 col-md-6 col-lg-3">
           <div class="modern-stat-card modern-stat-card--orange">
@@ -110,20 +85,7 @@
           </div>
         </div>
 
-        <div class="col-6 col-md-6 col-lg-3">
-          <div class="modern-stat-card modern-stat-card--blue">
-            <div class="modern-stat-card__icon">
-              <i class="fa-solid fa-star"></i>
-            </div>
-            <div class="modern-stat-card__content">
-              <h3 class="modern-stat-card__value">24</h3>
-              <p class="modern-stat-card__label">Reviews</p>
-            </div>
-            <div class="modern-stat-card__bg-icon">
-              <i class="fa-solid fa-star"></i>
-            </div>
-          </div>
-        </div>
+        
       </div>
     </div>
   </div>
