--- a/templates/include/footer.html
+++ b/templates/include/footer.html
@@ -27,22 +27,18 @@
 
 						<ul class="list-unstyled custom-social d-flex gap-3 mt-4">
 							<li>
-								<a href="#" class="social-link">
+								<a href="https://www.facebook.com/umair.rajpoot.617644/" class="social-link">
 									<span class="fa fa-brands fa-facebook-f"></span>
 								</a>
 							</li>
+							
 							<li>
-								<a href="#" class="social-link">
-									<span class="fa fa-brands fa-twitter"></span>
-								</a>
-							</li>
-							<li>
-								<a href="#" class="social-link">
+								<a href="https://www.instagram.com/_.umair001/" class="social-link">
 									<span class="fa fa-brands fa-instagram"></span>
 								</a>
 							</li>
 							<li>
-								<a href="#" class="social-link">
+								<a href="https://www.linkedin.com/in/muhammad-umair-b65963331/" class="social-link">
 									<span class="fa fa-brands fa-linkedin"></span>
 								</a>
 							</li>
