--- a/templates/contact/conatct.html
+++ b/templates/contact/conatct.html
@@ -59,29 +59,30 @@
                 </div>
               </div>
 
-              <form>
+              <form action="{% url 'contact' %}" method="POST">
+                {% csrf_token %}
                 <div class="row">
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="fname">First name</label>
-                      <input type="text" class="form-control" id="fname">
+                      <input type="text" class="form-control" id="fname" name="first_name" required>
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="lname">Last name</label>
-                      <input type="text" class="form-control" id="lname">
+                      <input type="text" class="form-control" id="lname" name="last_name" required>
                     </div>
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email">
+                  <input type="email" class="form-control" id="email" name="email" required>
                 </div>
 
                 <div class="form-group mb-5">
                   <label class="text-black" for="message">Message</label>
-                  <textarea name="" class="form-control" id="message" cols="30" rows="5"></textarea>
+                  <textarea name="message" class="form-control" id="message" cols="30" rows="5" required></textarea>
                 </div>
 
                 <button type="submit" class="btn btn-primary-hover-outline">Send Message</button>
